# serializer version: 1
# name: test_HAT_3x
  ImageModelDescriptor(
    architecture='HAT',
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=3,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'medium',
      's64w16',
      '64nf',
      '180dim',
      '1conv',
    ]),
  )
# ---
# name: test_HAT_4x
  ImageModelDescriptor(
    architecture='HAT',
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'medium',
      's64w16',
      '64nf',
      '180dim',
      '1conv',
    ]),
  )
# ---
# name: test_HAT_L_4x
  ImageModelDescriptor(
    architecture='HAT',
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'large',
      's64w16',
      '64nf',
      '180dim',
      '1conv',
    ]),
  )
# ---
# name: test_HAT_S_2x
  ImageModelDescriptor(
    architecture='HAT',
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'small',
      's64w16',
      '64nf',
      '144dim',
      '1conv',
    ]),
  )
# ---
# name: test_HAT_S_3x
  ImageModelDescriptor(
    architecture='HAT',
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=3,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'small',
      's64w16',
      '64nf',
      '144dim',
      '1conv',
    ]),
  )
# ---
# name: test_HAT_S_4x
  ImageModelDescriptor(
    architecture='HAT',
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'small',
      's64w16',
      '64nf',
      '144dim',
      '1conv',
    ]),
  )
# ---
# name: test_HAT_community1
  ImageModelDescriptor(
    architecture='HAT',
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'medium',
      's64w16',
      '64nf',
      '180dim',
      '1conv',
    ]),
  )
# ---
# name: test_HAT_community2
  ImageModelDescriptor(
    architecture='HAT',
    input_channels=3,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'small',
      's64w16',
      '64nf',
      '144dim',
      '1conv',
    ]),
  )
# ---
